--- a/memoria/Capitulos/analanteced.tex
+++ b/memoria/Capitulos/analanteced.tex
@@ -38,7 +38,7 @@ Entre otras funcionalidades, Nook's Island cuenta también con un sistema para c
 
 \section{Aportación realizada}
 
-Los servicios mostrados anteriormente no son los únicos que se pueden encontrar en Internet, hay una extensa cantidad de herramientas disponibles \cite{acnhdirectory} pero la mayoría se encuentran en sitios web distintos y algunas pueden llegar a ser algo confusas y poco intuitivas para el usuario.\\
+Los servicios mostrados anteriormente no son los únicos que se pueden encontrar en Internet, hay una extensa cantidad de herramientas disponibles \citep{acnhdirectory} pero la mayoría se encuentran en sitios web distintos y algunas pueden llegar a ser algo confusas y poco intuitivas para el usuario.\\
 
 Para hacerle más fácil la búsqueda de información al usuario, nuestro proyecto centraliza varias de las herramientas existentes en un mismo sitio web, buscando obtener una interfaz sencilla y simple que pueda ser apta para todos los públicos, incluidos los más pequeños, ya que no hay que olvidar que este videojuego abarca un público bastante extenso.\\
 
