--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -10,7 +10,7 @@ En esta iteración buscamos dejar empezado tanto el proyecto como la documentaci
 
 \textbf{Iteración 2}\\
 
-Planificamos el proyecto de forma que se quede dividido para las siguientes iteraciones y continuamos con la documentación. Redactamos los apartados que podemos (ya que algunos de ellos requieren que se haya avanzado más) de los capítulos 2, 3, 4 y 5. Además se realiza un curso de Angular \cite{cursoangular} para prepararnos para la siguiente iteración.\\
+Planificamos el proyecto de forma que se quede dividido para las siguientes iteraciones y continuamos con la documentación. Redactamos los apartados que podemos (ya que algunos de ellos requieren que se haya avanzado más) de los capítulos 2, 3, 4 y 5. Además se realiza un curso de Angular \citep{cursoangular} para prepararnos para la siguiente iteración.\\
 
 \textbf{Iteración 3}\\
 
