--- a/memoria/proyect.tex
+++ b/memoria/proyect.tex
@@ -1,8 +1,13 @@
 % !TEX encoding = UTF-8 Unicode
-\documentclass{pclass}
+\documentclass{tfgclass}
 \usepackage[utf8]{inputenc} % para linux y mac 
 %\usepackage[latin1]{inputenc} % para windows
+
+\usepackage{natbib}
+%\let\bibhang\relax
+\usepackage{apalike}
 \usepackage{hyperref}
+
   
 
 %DIFERENTES TIPOS DE LETRA
@@ -10,12 +15,13 @@
 %\usepackage{times} 
 \renewcommand{\rmdefault}{lmss}
 
+
 \begin{document}
 \tipo{Grado} 
 \titulopro{My Crossing}
 \tutor{José Ramón Portillo Fernández}
 \departamento{Matemática Aplicada I}
-\autores{Moisés Pantión Loza}{{Adrián Gracia Barroso}}   
+\autores{Moisés Pantión Loza y Adrián Gracia Barroso}{} 
 \dia{Junio de 2021}
 \titulacion{Ingeniería Informática - Ingeniería del Software}
 
@@ -51,7 +57,7 @@
 
 %\bibliographystyle{sousa5}
 
-\bibliographystyle{apacite}
+\bibliographystyle{apalike}
 
 \bibliography{pfcbib}
 
