--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -4,36 +4,42 @@
 
 Dividiremos el trabajo en varias iteraciones, de forma que el proyecto se quede lo más planificado posible para que, a la hora de trabajar, solo haya que seguir las iteraciones:\\
 
-\textbf{Iteración 1}\\
+\textbf{Iteración 1}
 
 En esta iteración buscamos dejar empezado tanto el proyecto como la documentación, creando una base sobre la que trabajar más adelante. Además dejamos preparadas las herramientas a utilizar, tanto de trabajo (Microsoft Visual Studio Code, XAMPP), como de redacción (TeXStudio, Google Docs), almacenamiento en la nube (GitHub, Google Drive) y gestión del tiempo (Toggl). Realizamos el primer capítulo de la documentación y diseñamos los mockups.\\
 
-\textbf{Iteración 2}\\
+\textbf{Iteración 2}
 
 Planificamos el proyecto de forma que se quede dividido para las siguientes iteraciones y continuamos con la documentación. Redactamos los apartados que podemos (ya que algunos de ellos requieren que se haya avanzado más) de los capítulos 2, 3, 4 y 5. Además se realiza un curso de Angular \citep{cursoangular} para prepararnos para la siguiente iteración.\\
 
-\textbf{Iteración 3}\\
+\textbf{Iteración 3}
 
 Esta iteración está pensada como introducción a Angular. Se planea tener lista la página de inicio, el registro de usuario y login, el acceso a perfil y su respectiva información sobre el usuario, así como las diversas acciones que puede realizar desde el mismo (a excepción del álbum de fotos). Se busca establecer la estructura de la base de datos, realizar la vista (final a ser posible) de las páginas mencionadas así como los elementos back-end necesarios para permitir a los usuarios registrarse en la plataforma, loguearse y acceder a su perfil. Además se realizarán las pruebas respectivas.\\
 
-Tras haber realizado la iteración, se descubrió que había cierta diferencia entre lo que pensábamos que sería el perfil y lo que ha acabado siendo (Más información en el capítulo 6).
+Tras haber realizado la iteración, se descubrió que había cierta diferencia entre lo que pensábamos que sería el perfil y lo que ha acabado siendo (Más información en el capítulo 6).\\
 
-\textbf{Iteración 4}\\
+\clearpage
 
-Se busca implementar API y los elementos relacionados con esta. Habría que hacer un repaso de lo hecho en la iteración anterior para aplicar las imagenes y valores que se necesiten de la API. Además se planea realizar los distintos catálogos (a excepción del de sueños y canciones) así como el listado de criaturas en tiempo real. Se realizarán las pruebas respectivas.\\
+\textbf{Iteración 4}
 
-\textbf{Iteración 5}\\
+Se busca implementar la API y los elementos relacionados con esta. Habría que hacer un repaso de lo hecho en la iteración anterior para aplicar las imágenes y valores que se necesiten de la API. Además se planea realizar los distintos catálogos (a excepción del de sueños y canciones) así como el listado de criaturas en tiempo real. Se realizarán las pruebas respectivas.\\
 
-Implementar las funciones de calculadora de nabos, calendario de eventos, álbum de fotos, catálogo de sueño, catálogo de canciones y vestuario, así como las pruebas respectivas.\\
+\textbf{Iteración 5}
 
-\textbf{Iteración 6}\\
+En esta iteración nos queremos centrar en la implementación de las funciones de calculadora de nabos, calendario de eventos, álbum de fotos, catálogo de sueño, catálogo de canciones y vestuario, así como las pruebas respectivas.\\
 
-Terminar la redacción de la documentación y revisarla de forma que se quede lista para la entrega, arreglar los posibles fallos menores que queden del proyecto, comprobar que la aplicación está terminada y realizar el despliegue.\\
+Una vez realizada la iteración, tuvimos que afrontar algunas decisiones que han tenido efecto en lo que finalmente se ha acabado desarrollando (Más información en el capítulo 6).\\
+
+\textbf{Iteración 6}
+
+En la última iteración queremos terminar la redacción de la documentación y revisarla de forma que se quede lista para la entrega, arreglar los posibles fallos menores que queden del proyecto, comprobar que la aplicación está terminada y realizar el despliegue.\\
 
 \subsection{Estimación vs Realidad}
 
 //TODO cambiar tabla
 \includegraphics[width=\textwidth]{img/cap4/analisistiempo.jpg}
+
+\clearpage
 
 \section{Costes de desarrollo}
 	
