--- a/memoria/Capitulos/manual.tex
+++ b/memoria/Capitulos/manual.tex
@@ -1,6 +1,6 @@
 \chapter{Manual de Usuario}\label{manual}
 
-Al acceder a la dirección https://mycrossing.herokuapp.com/ nos encontraremos con la siguiente pantalla:\\
+Al acceder a la dirección \href{https://mycrossing.herokuapp.com/}{https://mycrossing.herokuapp.com/} nos encontraremos con la siguiente pantalla:\\
 
 \figura{1}{img/cap9/1-inicio-not-logged.png}{Inicio}{fig:inicionl}{}
 
